fix: tool call parsing — replace fragile indexOf with regex matcher
- Replace per-tool indexOf loop with single TOOL_CALL_PATTERN regex
- Handles multiple tool calls in one response
- Logs unknown tool attempts instead of silently ignoring
- Null-safe input handling